--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -23,6 +23,9 @@
                     <ul class="nav flex-column">
                         {% if active_model == 'Matching' %}
                         <li class="nav-item">
+                            <a class="nav-link {% if active_submenu == 'introduction' %}active{% endif %}" href="{% url 'matching_app:introduction' %}">Introduction</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link {% if active_submenu == 'data_generation' %}active{% endif %}" href="{% url 'matching_app:data_generation' %}">Data Generation</a>
                         </li>
                         <li class="nav-item">
