--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -5,6 +5,6 @@
 {% block content %}
 <div class="container">
     <h1>Optimization Demo Platform</h1>
-    <p>좌측 상단의 모델을 선택하여 데모를 진행하세요.</p>
+    <p>상단의 모델을 선택하여 데모를 진행하세요.</p>
 </div>
 {% endblock %}
