--- a/matching_assignment_app/templates/matching_assignment_app/lcd_cf_tft_data_generation.html
+++ b/matching_assignment_app/templates/matching_assignment_app/lcd_cf_tft_data_generation.html
@@ -9,7 +9,7 @@
         <h1 class="h2">Matching Model: Data Generation</h1>
     </div>
 
-    <p>이 페이지에서 LCD TFT-CF 매칭 문제에 사용될 데이터를 생성합니다.</p>
+    <p>이 페이지에서 LCD CF-TFT 매칭 문제에 사용될 데이터를 생성합니다.</p>
     <p>CF 패널과 TFT 패널의 수, 각 패널의 셀(Cell) 크기를 선택하세요.</p>
 
     <form method="POST">
@@ -75,7 +75,7 @@
         
     {# 예를 들어, 생성된 데이터를 다음 단계(small_scale_demo)로 바로 보낼 수 있는 버튼/링크 추가 가능 #}
     <div class="mt-3">
-        <a href="{% url 'matching_app:small_scale_demo' %}" class="btn btn-info">Proceed to Small-scale Test with this data (Manual Copy/Paste)</a>
+        <a href="{% url 'matching_assignment_app:lcd_cf_tft_small_scale_demo' %}" class="btn btn-info">Proceed to Small-scale Test with this data (Manual Copy/Paste)</a>
         {# 또는 세션/DB를 사용하여 데이터를 전달하는 로직 구현 #}
     </div>
     {% endif %}
